# CMaketest

./: README.md
Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep005/source/src/: dog.cpp
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/include/: dog.hpp  log.hpp
Ep007/source/src/: dog.cpp  log.cpp
Ep008/source/: CMakeLists.txt  main.cpp
Ep008/source/logger/src/: log.cpp
Ep008/source/src/: operations.cpp
Ep008/source/src/maths/: CMakeLists.txt
Ep008/source/src/stats/: CMakeLists.txt  stats.cpp
Ep008/source/src/stats/include/: stats.hpp
Ep011/: message.cmake
